# CppJavaFusion

./: CMakeLists.txt
java/: TickTock.java
src/: main.cpp
